--- a/lib/interface/bobot_web/live/apis.html.heex
+++ b/lib/interface/bobot_web/live/apis.html.heex
@@ -3,8 +3,7 @@
 <header class="h-12 flex items-center gap-x-1 bg-purple-500 p-1 text-gray-100 dark:bg-purple-200 dark:text-gray-200">
   
     <.small_button :if={@current_api == nil} class="no-text" keyb="CTRL+ArrowLeft" keyb-hide 
-      type="button" onclick="this.querySelector('a').click()" icon="arrow-long-left" icon-pos="left">  
-      <.link navigate={~p"/"}></.link>    
+      type="button" icon="arrow-long-left" icon-pos="left" navigate={~p"/"}>  
     </.small_button>
 
     <.small_button :if={@current_api != nil} class="no-text" 
@@ -51,4 +50,4 @@
   <.bg_logo/>
 </main>
 
-<%= include("static", assigns) %>
+<%= include("modal", assigns) %>
