--- a/lib/interface/bobot_web/live/bots.html.heex
+++ b/lib/interface/bobot_web/live/bots.html.heex
@@ -3,8 +3,7 @@
 <header class="h-12 flex items-center gap-x-1 bg-purple-500 p-1 text-gray-100 dark:bg-purple-200 dark:text-gray-200">
   
     <.small_button :if={@current_bot == nil} class="no-text" keyb="CTRL+ArrowLeft" keyb-hide
-      type="button" onclick="this.querySelector('a').click()" icon="arrow-long-left" icon-pos="left">  
-      <.link navigate={~p"/"}></.link>    
+      type="button" icon="arrow-long-left" icon-pos="left" navigate={~p"/"}>        
     </.small_button>
 
     <.small_button :if={@current_bot != nil} class="no-text" 
@@ -49,15 +48,15 @@
     </.small_button>
 
     <.small_button :if={@current_bot != nil} disabled={not is_list(@current_bot[:settings])}
-      class="float-right" type="button" phx-click="view-bot" icon="credit-card-solid" keyb="F3">
-      View bot
+      class="float-right" type="button" phx-click="edit-bot" icon="credit-card-solid" keyb="F4">
+      Edit bot
     </.small_button>
 
     <.small_button :if={@current_bot != nil} disabled={not is_list(@current_bot[:settings])}
       class={[( @current_bot[:changed] == true or (
-        (@current_bot[:name] |> Bobot.Tools.get_bot_module() |> Bobot.Tools.get_module_md5()) 
+        (@current_bot[:name] |> Bobot.Utils.get_bot_module() |> Bobot.Utils.get_module_md5()) 
           != 
-        (@current_bot[:name] |> file_name() |> Bobot.Tools.source_file_md5())
+        (@current_bot[:name] |> file_name() |> Bobot.Utils.source_file_md5())
       )) && "animate-color" || "", "float-right"]} 
       phx-click="save-bot" icon="folder-arrow-down-solid" type="button" keyb="F2">
       Save
@@ -70,7 +69,7 @@
 
   <!-- Blocks -->
   <span :if={@current_bot} class="block flex flex-col flex-wrap">
-    <%= for %{name: name} = block_data <- @current_bot[:blocks] do %>
+    <%= for %{name: name} = block_data <- (@current_bot[:blocks] || []) do %>
     <span class="defblock">
       <div data-block-name={name} class={[
         "flex-none inline-block min-w-64 relative font-mono text-xs h-fit-content m-2 p-2 pr-10",
@@ -82,10 +81,10 @@
           params = params == "[]" && "" || params
           raw("<b>#{name}</b> <div class=\"float-right\">#{params}</div>")
         %>
-        <.icon_button class="remove absolute right-2 top-2 text-gray-600 hover:text-red-800 hover:scale-110" 
+        <.icon_button class="remove absolute right-2 top-2 text-purple-600 hover:text-purple-800 hover:scale-110" 
           icon="x-circle-solid" icon-size="3"
           onclick={"confirm_action('Are you sure about to remove <b class=\"text-red-800\">#{name}</b> block?', 'remove_block:#{name}')"}/>
-        <.icon_button class="edit absolute right-6 top-2 text-gray-600 hover:text-red-800 hover:scale-110" 
+        <.icon_button class="edit absolute right-6 top-2 text-purple-600 hover:text-purple-800 hover:scale-110" 
           icon="pencil-solid" icon-size="3" phx-click="open-block" value={name}/>      
       </div>
       <!-- <div class="inline-block relative -top-1 ml-32 w-0 h-0" data-block-name-anchor={name}></div> -->
@@ -153,5 +152,4 @@
 
 </main>
 
-<%= include("static", assigns) %>
-
+<%= include("modal", assigns) %>
