--- a/lib/interface/bobot_web/live/home.html.heex
+++ b/lib/interface/bobot_web/live/home.html.heex
@@ -35,27 +35,30 @@
                 place-content-start bg-transparent z-1 justify-items-center">    
       <span class="home-list before:text-purple-800" content="bots">
         <div :for={bot <- @available_bots}
-          class="min-w-64 font-mono text-xs h-fit-content m-2 p-2 border-2 border-purple-400 bg-white rounded-lg">
+          class="min-w-80 font-mono text-xs h-fit-content m-2 p-2 border-2 border-purple-400 bg-white rounded-lg">
           <%= "#{bot}" %>
-          <.checkbox class="float-right" name={bot} value={bot} checked={bot in @active_bots}
-            title="Activate/deactivate bot"/>
-          <.icon_button icon="pencil-solid" icon-size="4" value={"bots##{bot}"} title="Edit bot"
-            class="float-right mr-2 text-purple-600 hover:text-purple-800 hover:scale-110"
-            phx-click="navigate-to-value"/>
           <.icon_button icon="x-circle-solid" icon-size="4" value={bot} title="Remove bot"
             class="float-right mr-2 text-purple-600 hover:text-purple-800 hover:scale-110"
             onclick={"confirm_action(
               'Are you sure about to remove the bot <b class=\"text-red-800\">#{bot}</b>?', 'remove:bots:#{bot}'
             )"}/>
+          <.icon_button icon="pencil-solid" icon-size="4" title="Edit bot"
+            class="float-right mr-2 text-purple-600 hover:text-purple-800 hover:scale-110"
+            phx-click="navigate-to-value" value={"bots##{bot}"}/>
+          <.icon_button disabled={bot not in @active_bots} icon="arrow-path" icon-size="4" title="Reload bot"
+            class="float-right mr-2 text-purple-600 hover:text-purple-800 hover:scale-110 disabled:text-gray-300"
+            phx-click="reload-bot" value={bot}/>
+          <.checkbox class="float-right" name={bot} value={bot} checked={bot in @active_bots}
+            title="Activate/deactivate bot"/>
         </div>
       </span>
       <span class="home-list before:text-purple-800" content="apis">
         <div :for={api <- @available_apis}
           class="min-w-64 font-mono text-xs h-fit-content m-2 p-2 border-2 border-purple-400 bg-white rounded-lg">
           <%= "#{api}" %>
-          <.icon_button icon="pencil-solid" icon-size="4" value={"apis##{api}"} title="Edit api"
+          <.icon_button icon="pencil-solid" icon-size="4" title="Edit api"
             class="float-right mr-2 text-purple-600 hover:text-purple-800 hover:scale-110"
-            phx-click="navigate-to-value"/>
+            phx-click="navigate-to-value" value={"apis##{api}"}/>
           <.icon_button icon="x-circle-solid" icon-size="4" value={api} title="Remove api"
             class="float-right mr-2 text-purple-600 hover:text-purple-800 hover:scale-110"
             onclick={"confirm_action(
@@ -67,9 +70,9 @@
         <div :for={lib <- @available_libs}
           class="min-w-64 font-mono text-xs h-fit-content m-2 p-2 border-2 border-purple-400 bg-white rounded-lg">
           <%= "#{lib}" %>
-          <.icon_button icon="pencil-solid" icon-size="4" value={"libs##{lib}"} title="Edit lib"
+          <.icon_button icon="pencil-solid" icon-size="4" title="Edit lib"
             class="float-right mr-2 text-purple-600 hover:text-purple-800 hover:scale-110"
-            phx-click="navigate-to-value"/>
+            phx-click="navigate-to-value" value={"libs##{lib}"}/>
           <.icon_button icon="x-circle-solid" icon-size="4" value={lib} title="Remove lib"
             class="float-right mr-2 text-purple-600 hover:text-purple-800 hover:scale-110"
             onclick={"confirm_action(
