--- a/priv/static/assets/extend.css
+++ b/priv/static/assets/extend.css
@@ -115,6 +115,12 @@ input[readonly]:focus {
 .w-96 {
   width: 24rem;
 }
+.min-w-80 {
+  min-width: 20rem;
+}
+.min-w-96 {
+  min-width: 24rem;
+}
 
 .w-80\% {
   width: 80%;
