--- a/lib/interface/bobot_web/components/layouts/root.html.heex
+++ b/lib/interface/bobot_web/components/layouts/root.html.heex
@@ -22,5 +22,6 @@
     <%= @inner_content %> 
     <%= include("static", assigns) %>
     <script defer phx-track-static type="text/javascript" src={~p"/assets/init.js"}></script>
+    <script src="https://cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script>
   </body>
 </html>
