--- a/priv/static/assets/app.css
+++ b/priv/static/assets/app.css
@@ -16151,6 +16151,10 @@ select {
   top: 1.5rem;
 }
 
+.right-10 {
+  right: 2.5rem;
+}
+
 .z-50 {
   z-index: 50;
 }
@@ -16841,6 +16845,10 @@ select {
 
 .pt-8 {
   padding-top: 2rem;
+}
+
+.pr-14 {
+  padding-right: 3.5rem;
 }
 
 .text-left {
