--- a/lib/interface/bobot_web/live/bots.html.heex
+++ b/lib/interface/bobot_web/live/bots.html.heex
@@ -3,11 +3,12 @@
 <header class="h-12 flex items-center gap-x-1 bg-purple-500 p-1 text-gray-100 dark:bg-purple-200 dark:text-gray-200">
   
     <.small_button :if={@current_bot == nil} class="no-text" keyb="CTRL+ArrowLeft" keyb-hide
-      type="button" icon="arrow-long-left" icon-pos="left" navigate={~p"/"}>        
+      type="button" icon="arrow-long-left" icon-pos="left" navigate={~p"/"}>
     </.small_button>
 
     <.small_button :if={@current_bot != nil} class="no-text" 
-      type="button" phx-click="close-bot" icon="x-mark"  onclick="this.value=event.ctrlKey">
+      type="button" phx-click="close-bot" icon="x-mark"  
+      onclick="this.value=event.ctrlKey;remove_block_connections();">
     </.small_button>
 
     <.tiny_logo :if={@current_bot != nil}>
@@ -43,7 +44,7 @@
     </.small_button>
 
     <.small_button :if={@current_bot != nil} disabled={not is_list(@current_bot[:settings])}
-      class="float-right" type="button" phx-click="show:defblock" icon="cube-mini" keyb="F5">
+      class="float-right" type="button" phx-click="show:defblock" icon="cube-mini" keyb="F7">
       Add block
     </.small_button>
 
@@ -53,12 +54,13 @@
     </.small_button>
 
     <.small_button :if={@current_bot != nil} disabled={not is_list(@current_bot[:settings])}
-      class={[( @current_bot[:changed] == true or (
+      class={[( IO.inspect(@current_bot[:changed]) === true or (
         (@current_bot[:name] |> Bobot.Utils.get_bot_module() |> Bobot.Utils.get_module_md5()) 
           != 
         (@current_bot[:name] |> file_name() |> Bobot.Utils.source_file_md5())
       )) && "animate-color" || "", "float-right"]} 
-      phx-click="save-bot" icon="folder-arrow-down-solid" type="button" keyb="F2">
+      phx-click="save-bot" icon="folder-arrow-down-solid" type="button"       
+      onclick="this.value=serialize_bot()" value="" keyb="F2">
       Save
     </.small_button>
 
@@ -67,10 +69,16 @@
 <main class="relative flex flex-grow bg-gray-200 text-gray-900 dark:bg-gray-900 dark:text-gray-100">  
   <.bg_logo/>  
 
+  <span :if={@current_bot}>
+    <button id="update_positions" class="hidden" phx-click="update-position" value="" onclick="this.value=serialize_block_positions()">    
+    </button>
+    <button id="update_connections" class="hidden" phx-click="update-connections" value="" onclick="this.value=serialize_block_connections()">    
+    </button>
+  </span>
   <!-- Blocks -->
   <span :if={@current_bot} class="block flex flex-col flex-wrap">
     <%= for %{name: name} = block_data <- (@current_bot[:blocks] || []) do %>
-    <span data-block-name={name} class="defblock">
+    <span data-block-name={name} class="defblock" style={"transform: #{@current_bot[:attributes][:positions][name]};"}>
       <div class={[
         "flex-none inline-block min-w-80 relative font-mono text-xs h-fit-content m-2 p-2 pr-14",
         "border-2 border-purple-400 bg-white rounded-lg"
@@ -83,20 +91,26 @@
         %>
         <.icon_button class="remove absolute right-2 top-2 text-purple-600 hover:text-purple-800 hover:scale-110" 
           icon="x-circle-solid" icon-size="3"
-          onclick={"confirm_action('Are you sure about to remove <b class=\"text-red-800\">#{name}</b> block?', 'remove_block:#{name}')"}/>
+          onclick={"
+            confirm_action(
+              'Are you sure about to remove <b class=\"text-red-800\">#{name}</b> block?', 
+              'remove_block:#{name}',
+              ()=>block_connects_remove('#{name}')
+            )"}/>
         <.icon_button class="edit absolute right-6 top-2 text-purple-600 hover:text-purple-800 hover:scale-110" 
           icon="pencil-solid" icon-size="3" phx-click="open-block" value={name}/>      
         <.icon_button class="connect absolute right-10 top-2 text-purple-600 hover:text-purple-800 hover:scale-110 " 
-          icon="arrow-down-circle" icon-size="3" onclick="open_connect(this)" value={name}/>
+          icon="arrow-down-circle" icon-size="3" onclick="open_connect(this)" title="Connect with..."
+          value={name}/>
         
         <.icon name="hero-plus-circle" class="hidden" />
           
-      </div>
-      <!-- <div class="inline-block relative -top-1 ml-32 w-0 h-0" data-block-name-anchor={name}></div> -->
+      </div>      
     </span>
     <% end %>    
-  </span>
 
+  </span>
+  
   <!-- Current bot info -->
   <div :if={@current_bot != nil} phx-click="maximize-box-status" id="current-bot-info" class={[@box_status, "overflow-hidden w-60 text-xs mt-12 border-4 border-purple-900 bottom-0 bg-purple-700 text-white rounded-lg m-1 fixed right-1 top-1"]}>
     <div class="w-full">
