--- a/lib/interface/bobot_web/live/bots.html.heex
+++ b/lib/interface/bobot_web/live/bots.html.heex
@@ -27,6 +27,13 @@
       type="button" phx-click="show:defbot" icon="plus-circle-mini">
       New...
     </.small_button>
+    
+    <!--
+    <.small_button :if={@current_bot != nil} keyb="F8" title="Add conditional block"
+      type="button" phx-click="show:pseudoblock" icon="plus-circle">
+      <span class="text-xl">◆</span>
+    </.small_button>
+    -->
 
     <.small_button :if={@current_bot != nil}  keyb="F1"
       class="ml-auto float-right" type="button" phx-click="show:defbot" icon="adjustments-horizontal">
@@ -54,7 +61,7 @@
     </.small_button>
 
     <.small_button :if={@current_bot != nil} disabled={not is_list(@current_bot[:settings])}
-      class={[( IO.inspect(@current_bot[:changed]) === true or (
+      class={[( @current_bot[:changed] === true or (
         (@current_bot[:name] |> Bobot.Utils.get_bot_module() |> Bobot.Utils.get_module_md5()) 
           != 
         (@current_bot[:name] |> file_name() |> Bobot.Utils.source_file_md5())
@@ -99,16 +106,46 @@
             )"}/>
         <.icon_button class="edit absolute right-6 top-2 text-purple-600 hover:text-purple-800 hover:scale-110" 
           icon="pencil-solid" icon-size="3" phx-click="open-block" value={name}/>      
+        
+        <!--
+        <%!--
         <.icon_button class="connect absolute right-10 top-2 text-purple-600 hover:text-purple-800 hover:scale-110 " 
           icon="arrow-down-circle" icon-size="3" onclick="open_connect(this)" title="Connect with..."
           value={name}/>
-        
+        --%>
+        -->        
         <.icon name="hero-plus-circle" class="hidden" />
           
       </div>      
     </span>
     <% end %>    
-
+    <!--
+    <%!--
+    <%= for [name, text] <- @current_bot[:attributes][:pseudo_blocks] do %>
+    <%= 
+      pos = @current_bot[:attributes][:positions][name] 
+      raw("")
+    %>    
+    <span class="pseudo-defblock" data-block-name={name}
+          style={pos && "transform: #{pos}" || ""}>
+      <div class="flex-none relative inline-block w-full h-full relative text-xs m-2 p-2
+                  border-2 border-purple-400 bg-white rounded-lg" 
+           style="text-align: center; align-content: center; rotate: -45deg;">
+        <.icon_button 
+          class="connect absolute right-2 top-2 rotate-45 text-purple-600 hover:text-purple-800 hover:scale-110" 
+          icon="arrow-down-circle" icon-size="3" onclick="open_connect(this)" title="Connect with..."
+          value={name}/>
+        <.icon_button class="remove absolute left-2 bottom-2 text-purple-600 hover:text-purple-800 hover:scale-110" 
+          icon="x-circle-solid" icon-size="3" onclick={"block_connects_remove('#{name}')"} 
+          phx-click="remove-pseudoblock" value={name}/>
+        <div style="rotate: 45deg;">
+          <%= text %>
+        </div>
+      </div>
+    </span>
+    <% end %>
+    --%>
+    -->
   </span>
   
   <!-- Current bot info -->
